# selenium-automation

./: .env.example  .gitignore  README.md  gui.bat  pyproject.toml  run.bat  test_orders.txt
application_state/: downloads.csv
data/: .~lock.navigation.xlsx#  navigation.xlsx
src/app/: run.py
src/app/core/: excel_handler.py
src/app/ui/: main_frame.py  mapping_popup.py  theme.py
src/automation/: __init__.py  main.py
src/automation/authentication/: login.py  session_manager.py
src/automation/config/: excel_mapper.py  locators.py  settings.py
src/automation/ui/: navigation.py  page_base.py
src/automation/utilities/: action_utils.py  excel_mapper.py  excel_reader.py  file_manager.py  logger.py  report_downloader.py  save_download_state.py  wait_utils.py
src/automation/workflows/: download_reports.py  upload_reports.py
