[tool.poetry]
name = "selenium-automation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "automation", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
selenium = "^4.38.0"
openpyxl = "^3.1.5"
python-dotenv = "^1.2.1"
webdriver-manager = "^4.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"